change some image references to images hosted on github

--- a/components/contact.html
+++ b/components/contact.html
@@ -14,10 +14,10 @@
         <div>
             <h6 class="text-white font-semibold text-2xl pt-3 pb-1">Socials</h6>
             <div id="socials" class="flex gap-4 my-5">
-                <img src="../assets/images/socials/facebook.svg" class="text-white" />
-                <img src="../assets/images/socials/instagram.svg" class="text-white" />
-                <img src="../assets/images/socials/x.svg" class="text-white" />
-                <img src="../assets/images/socials/youtube.svg" class="text-white" />
+                <img src="https://raw.githubusercontent.com/finesse-codes/travel-bloom/9c41baab13bd53c1f6b3d7bd332d90add934b396/assets/images/socials/facebook.svg" class="text-white" />
+                <img src="https://raw.githubusercontent.com/finesse-codes/travel-bloom/9c41baab13bd53c1f6b3d7bd332d90add934b396/assets/images/socials/instagram.svg" class="text-white" />
+                <img src="https://raw.githubusercontent.com/finesse-codes/travel-bloom/9c41baab13bd53c1f6b3d7bd332d90add934b396/assets/images/socials/x.svg" class="text-white" />
+                <img src="https://raw.githubusercontent.com/finesse-codes/travel-bloom/9c41baab13bd53c1f6b3d7bd332d90add934b396/assets/images/socials/youtube.svg" class="text-white" />
             </div>
         </div>
 
