--- a/components/about.html
+++ b/components/about.html
@@ -21,7 +21,7 @@
 
         <div class="sm:w-1/3 w-full bg-gradient-to-t from-[#112C54]  to-[#7B5A5B] rounded-sm p-3 drop-shadow-sm flex items-center sm:flex-col flex-row gap-3 py-4">
             <div>
-                <div id="avatar" class="rounded-full h-[150px] w-[150px] bg-cover mb-5 drop-shadow-md border-gray-400 border-2" style="background-image: url('../assets/images/profiles/emily.jpg')">
+                <div id="avatar" class="rounded-full h-[150px] w-[150px] bg-cover mb-5 drop-shadow-md border-gray-400 border-2" style="background-image: url('https://github.com/finesse-codes/travel-bloom/blob/main/assets/images/profiles/emily.jpg?raw=true')">
                 </div>
                 <h4 class="text-white font-semibold text-xl text-center">Emily Rivera </h4>
                 <p class="text-blue-100 font-medium text-md text-center">Founder and CEO</p>
@@ -32,7 +32,7 @@
         </div>
         <div class="sm:w-1/3 w-full bg-gradient-to-t from-[#112C54]  to-[#7B5A5B]  rounded-sm p-3 drop-shadow-sm flex items-center sm:flex-col flex-row gap-3 py-4">
             <div>
-                <div id="avatar" class="rounded-full h-[150px] w-[150px] bg-cover mb-5 border-gray-400 drop-shadow-md border-2" style="background-image: url('../assets/images/profiles/liam.jpg')">
+                <div id="avatar" class="rounded-full h-[150px] w-[150px] bg-cover mb-5 border-gray-400 drop-shadow-md border-2" style="background-image: url('https://github.com/finesse-codes/travel-bloom/blob/main/assets/images/profiles/liam.jpg?raw=true')">
                 </div>
                 <h4 class="text-white font-semibold text-xl text-center">Liam Patel </h4>
                 <p class="text-blue-100 font-medium text-md text-center">Destination Research</p>
@@ -44,9 +44,9 @@
 
         <div class="sm:w-1/3 w-full bg-gradient-to-t from-[#112C54]  to-[#7B5A5B] rounded-sm p-3 drop-shadow-sm flex items-center sm:flex-col flex-row gap-3 py-4">
             <div>
-                <div id="avatar" class="rounded-full h-[150px] w-[150px] bg-cover mb-5 border-gray-400 drop-shadow-md border-2" style="background-image: url('../assets/images/profiles/sofia.jpg')">
+                <div id="avatar" class="rounded-full h-[150px] w-[150px] bg-cover mb-5 border-gray-400 drop-shadow-md border-2" style="background-image: url('https://github.com/finesse-codes/travel-bloom/blob/main/assets/images/profiles/sofia.jpg?raw=true')">
                 </div>
-                <h4 class="text-white font-semibold text-xl text-center">Sofie Tan </h4>
+                <h4 class="text-white font-semibold text-xl text-center">Sofia Tan </h4>
                 <p class="text-blue-100 font-medium text-md text-center">Content Specialist</p>
             </div>
 
