--- a/components/theNav.html
+++ b/components/theNav.html
@@ -2,7 +2,7 @@
 
 <nav class="bg-blue-950 border-gray-900 dark:bg-gray-950 z-50">
     <div class="max-w-screen-xl flex flex-wrap items-center justify-between mx-auto p-4">
-    <a href="/index.html" class="flex items-center space-x-3 rtl:space-x-reverse">
+    <a onclick="changeContent('home')" href="#" class="flex items-center space-x-3 rtl:space-x-reverse">
         <img src="assets/images/logo-white.svg" class="h-20" alt="TravelBloom Logo" />
         <span class="self-center text-2xl font-semibold whitespace-nowrap dark:text-navy-950 text-white">Travel Bloom</span>
     </a>
